# Kontrollzentrum

./: .editorconfig  .gitattributes  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
keys/: tauri.private.key
scripts/: export-shared-profile.ps1
src-tauri/: Cargo.toml  profile.shared.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
web/: app.js  automation.js  index.html  styles.css
web/modals/: add-app.modal.html  add-app.modal.js
